--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,36 @@ description = ""
 authors = ["Torstein Krause Johansen <rubbish@skybert.net>"]
 
 [tool.poetry.dependencies]
-python = "^3.5"
 flask = "^1.0"
+flask-cors = "^3.0.7"
+jinja2 = "^2.10"
+lxml = "^4.2.5"
 mysql-connector = "^2.1"
+pyaml = "^17.12.1"
+python = "^3.5"
+requests = "^2.20.1"
+sseclient-py = "^1.7"
+watchdog = "^0.9.0"
+xmltodict = "^0.11.0"
 
 [tool.poetry.dev-dependencies]
+# Must pin autopep8 at version 1.4.1 depends on a version pycodestyle
+# which breaks flake8 and pep8-naming as they depend on incompatible
+# versions of that library.
+autopep8 = "==1.4"
+flake8 = "^3.6.0"
+trepan3k = "^0.8.8"
+autoflake = "^1.2"
+deepdiff = "^3.3.0"
+docformatter = "^1.0"
+green = "^2.13.0"
+jedi = "^0.13.1"
+pep8-naming = "^0.7.0"
+pylint = "^2.1.1"
+pytest = "^3.10.1"
+rope = "^0.11.0"
+xmldiff ="^2.2"
+yapf = "^0.24.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
